added replay function

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     android:background="#FDEFF1"
-    tools:context=".MainActivity">
+    tools:context="sg.edu.tp.musicapp.MainActivity">
 
     <Button
         android:id="@+id/sign_in_button"
