--- a/app/src/main/res/layout/activity_song_listing.xml
+++ b/app/src/main/res/layout/activity_song_listing.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     android:background="#FDEFF1"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-    tools:context=".SongListing">
+    tools:context="sg.edu.tp.musicapp.SongListActivity">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,13 +44,14 @@
                 android:id="@+id/main_song_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
                 android:paddingLeft="20dp"
-                android:paddingTop="20dp"
+                android:paddingTop="30dp"
                 android:paddingRight="20dp"
-                android:paddingBottom="100dp"/>
+                android:paddingBottom="100dp" />
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
