--- a/app/src/main/res/layout/activity_play_song.xml
+++ b/app/src/main/res/layout/activity_play_song.xml
@@ -135,6 +135,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="30dp"
+        android:onClick="randomSong"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
