--- a/app/src/main/res/anim/pull_from_top.xml
+++ b/app/src/main/res/anim/pull_from_top.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="300"
-        android:fromYDelta="0%p"
-        android:interpolator="@android:anim/accelerate_interpolator"
-        android:toYDelta="100%p" />
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <translate
+        android:fromYDelta="0%"
+        android:toYDelta="100%p"
+        android:interpolator="@android:anim/linear_interpolator"
+        android:duration="400" />
+
+    <alpha
+        android:fromAlpha="1.0"
+        android:toAlpha="0.0"
+        android:duration="200" />
 </set>
