--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     android:background="#FDEFF1"
+    android:fitsSystemWindows="true"
     tools:context="sg.edu.tp.musicapp.MainActivity">
 
     <Button
@@ -85,8 +86,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:onClick="goToPrivacy"
-        android:text="Privacy Policy. Developed by Putra Nursallihin."
+        android:text="Developed by Putra Nursallihin."
         android:textColor="#80E52657"
+        android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -97,9 +99,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/cabin_bold"
-        android:text=" Forgot Password"
+        android:text="Forgot Password"
         android:textColor="#192553"
         android:textSize="16sp"
+        android:onClick="forgotPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />
