--- a/app/src/main/res/layout/activity_play_song.xml
+++ b/app/src/main/res/layout/activity_play_song.xml
@@ -31,7 +31,7 @@
         android:id="@+id/txtSongTitle"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#192553"
         android:fontFamily="@font/cabin_bold"
         android:text="Song Title"
@@ -72,7 +72,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/goBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="goPrevActivity"
@@ -85,12 +85,11 @@
         android:id="@+id/playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="70dp"
         android:onClick="playOrPauseMusic"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/btn_play" />
 
@@ -159,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/cabin"
-        android:text="0.00"
+        android:text="-.--"
         android:textAlignment="viewStart"
         android:textColor="#80C40033"
         android:textSize="12sp"
