--- a/app/src/main/res/layout/activity_song_listing.xml
+++ b/app/src/main/res/layout/activity_song_listing.xml
@@ -7,12 +7,14 @@
     android:layout_height="match_parent"
     android:background="#FDEFF1"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+    android:clipToPadding="false"
     tools:context="sg.edu.tp.musicapp.SongListActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" >
@@ -21,37 +23,75 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
+            android:clipToPadding="false"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
-            <TextView
-                android:id="@+id/greeting_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:fontFamily="@font/cabin_bold"
-                android:gravity="center"
-                android:keepScreenOn="true"
-                android:paddingLeft="35dp"
-                android:paddingRight="20dp"
-                android:text="Hi Zahra!"
-                android:textColor="#E52657"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="40dp">
+
+                <TextView
+                    android:id="@+id/greeting_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:fontFamily="@font/cabin_bold"
+                    android:gravity="center"
+                    android:keepScreenOn="true"
+                    android:onClick="showLogOut"
+                    android:text="Hi Zahra!"
+                    android:textColor="#E52657"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/logOutApp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="15dp"
+                    android:onClick="showLogOut"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/btn_logout" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/main_song_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:clipToPadding="false"
                 android:nestedScrollingEnabled="false"
-                android:paddingLeft="20dp"
-                android:paddingTop="30dp"
-                android:paddingRight="20dp"
                 android:paddingBottom="100dp" />
+
+
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <Button
+        android:id="@+id/logOutBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:backgroundTint="#FFFFFF"
+        android:elevation="20dp"
+        android:onClick="logOut"
+        android:text="Logout"
+        android:textColor="#404642"
+        android:visibility="gone"
+        app:cornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/scrollView"
+        app:layout_constraintTop_toTopOf="@+id/frameLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
